# nolan

./: .gitignore  README.md  config.yaml  setup.sh  start.sh  test-fresh-clone.sh
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/bindings/: AgentSessionStats.ts  AgentStats.ts  DailyUsage.ts  ModelUsage.ts
app/src-tauri/src/: constants.rs  error.rs  lib.rs  main.rs
app/src-tauri/src/api/: auth.rs  mod.rs  routes.rs  ws.rs
app/src-tauri/src/cli_providers/: claude.rs  mod.rs  opencode.rs  types.rs
app/src-tauri/src/commands/: agents.rs  communicator.rs  deployment.rs  feedback.rs  filesystem.rs  git_folders.rs  history.rs  lifecycle.rs  lifecycle_core.rs  lifecycle_helpers.rs  lifecycle_ralph.rs  lifecycle_status.rs  lifecycle_team.rs  lifecycle_terminal.rs  mod.rs  ollama.rs  organization.rs  policies.rs  projects.rs  roles.rs  session_labels.rs  sessions.rs  teams.rs  templates.rs  usage.rs
app/src-tauri/src/config/: mod.rs  ui_config.rs
app/src-tauri/src/cronos/: commands.rs  executor.rs  manager.rs  mod.rs  pipeline.rs  team_pipeline.rs  types.rs
app/src-tauri/src/events/: bus.rs  handlers.rs  mod.rs  types.rs
app/src-tauri/src/git/: folders.rs  mod.rs  worktree.rs
app/src-tauri/src/ollama/: mod.rs  types.rs
app/src-tauri/src/scheduler/: commands.rs  commands_agent.rs  commands_analyzer.rs  commands_history.rs  commands_ideas.rs  commands_pipeline.rs  commands_schedules.rs  executor.rs  manager.rs  mod.rs  pipeline.rs  team_pipeline.rs  types.rs
app/src-tauri/src/services/: mod.rs  python_service.rs
app/src-tauri/src/shell/: executor.rs
app/src-tauri/src/templates/: mod.rs
app/src-tauri/src/tmux/: external_terminal.rs  mod.rs  session.rs  terminal_input.rs  terminal_stream.rs
app/src-tauri/src/utils/: paths.rs
app/src-tauri/templates/build-nolan/: CLAUDE.md  agent.yaml
app/src-tauri/templates/deploy-nolan/: CLAUDE.md  agent.yaml
app/src-tauri/templates/git-commit/: agent.yaml
app/src-tauri/templates/idea-analyzer/: agent.yaml
app/src-tauri/templates/merge-changes/: CLAUDE.md  agent.yaml
app/src-tauri/templates/phase-validator/: agent.yaml
app/src-tauri/templates/qa-validation/: agent.yaml
app/src-tauri/templates/quick-fix/: agent.yaml
app/src-tauri/templates/research/: CLAUDE.md  agent.yaml
services/transcript-service/: install.sh  pyproject.toml  run.py
(+1213 files in other folders)
