[package]
name = "nolan"
version = "0.1.0"
description = "An AI Command Center"
authors = ["Mikel Martin"]
edition = "2021"
default-run = "nolan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nolan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core (needed for command macros)
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-single-instance = "2.3.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
regex = "1"
tokio = { version = "1.49", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4"] }
shell-escape = "0.1"
notify = "8.2"
once_cell = "1"
walkdir = "2"
dashmap = "6"
dirs = "6.0"
nix = { version = "0.30", features = ["fs"] }

# Cron scheduling
tokio-cron-scheduler = "0.15"
cron = "0.15"

# HTTP API server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"

# Authentication
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

# HTTP client for Ollama
reqwest = { version = "0.13", features = ["json"] }

# TypeScript type generation
ts-rs = { version = "11", features = ["serde-compat", "chrono-impl"] }

[[bin]]
name = "nolan-server"
path = "src/bin/server.rs"
required-features = []  # No features required - headless server

[dev-dependencies]
tempfile = "3"

