[project]
name = "nolan-transcript-service"
version = "0.1.0"
description = "JSON RPC service for Claude Code transcript management"
requires-python = ">=3.10"
dependencies = [
    "claude-code-log==0.9.0",
    "pydantic>=2.12.0,<3.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
